// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkflowProjectGenerator > Get inline prompt node files > should generate the function at top level of node file > inline_prompt_test/nodes/inline_prompt_node.py 1`] = `
"from vellum import JinjaPromptBlock, PromptParameters
from vellum.workflows.nodes.displayable import InlinePromptNode as BaseInlinePromptNode
from vellum.workflows.types.core import MergeBehavior


def my_test_function(arg1: str, arg2: str) -> str:
    """Processes input data and returns formatted output"""
    return f"arg1: {arg1}, arg2: {arg2}"


class InlinePromptNode(BaseInlinePromptNode):
    ml_model = "gpt-4"
    blocks = [
        JinjaPromptBlock(template="""Hello world"""),
    ]
    functions = [my_test_function]
    parameters = PromptParameters(
        stop=[],
        temperature=0.7,
        max_tokens=None,
        top_p=None,
        top_k=None,
        frequency_penalty=None,
        presence_penalty=None,
        logit_bias=None,
        custom_parameters=None,
    )

    class Trigger(BaseInlinePromptNode.Trigger):
        merge_behavior = MergeBehavior.AWAIT_ATTRIBUTES
"
`;

exports[`WorkflowProjectGenerator > LEGACY prompt node codegen > should properly handle legacy prompt node even if ml model name is not found > code/nodes/legacy_prompt_node.py 1`] = `
"from vellum import ChatMessagePromptBlock, JinjaPromptBlock, PromptParameters
from vellum.workflows.nodes.displayable import InlinePromptNode

from ..inputs import Inputs


class LegacyPromptNode(InlinePromptNode):
    ml_model = ""
    blocks = [
        ChatMessagePromptBlock(
            chat_role="SYSTEM", blocks=[JinjaPromptBlock(template="""You are a helpful assistant.""")]
        ),
    ]
    prompt_inputs = {
        "query_str": Inputs.query_str,
    }
    parameters = PromptParameters(
        stop=[],
        temperature=0,
        max_tokens=256,
        top_p=1,
        top_k=0,
        frequency_penalty=0,
        presence_penalty=0,
        logit_bias=None,
        custom_parameters=None,
    )
"
`;

exports[`WorkflowProjectGenerator > LazyReference > should not generate LazyReference when there is a long branch > code/nodes/api_node.py 1`] = `
"from vellum.workflows.constants import APIRequestMethod, AuthorizationType
from vellum.workflows.nodes.displayable import APINode as BaseAPINode
from vellum.workflows.references import VellumSecretReference

from .parallel_node_2 import ParallelNode2
from .request_body_node import RequestBodyNode


class APINode(BaseAPINode):
    url = ParallelNode2.Outputs.result
    method = APIRequestMethod.POST
    json = RequestBodyNode.Outputs.result
    api_key_header_key = None
    authorization_type = AuthorizationType.BEARER_TOKEN
    api_key_header_value = None
    bearer_token_value = VellumSecretReference("TEST_SECRET")
"
`;

exports[`WorkflowProjectGenerator > LazyReference > should not generate LazyReference when there is a simple loop > code/nodes/router_node.py 1`] = `
"from vellum.workflows import BaseNode
from vellum.workflows.ports import Port

from .start_node import StartNode


class RouterNode(BaseNode):
    class Ports(BaseNode.Ports):
        top = Port.on_if(StartNode.Outputs.result.equals("top"))
        bottom = Port.on_else()
"
`;

exports[`WorkflowProjectGenerator > Node comments serialization > should serialize node comments with values as docstrings in SDK > code/nodes/test_node.py 1`] = `
"from vellum.workflows.nodes.displayable import TemplatingNode
from vellum.workflows.state import BaseState


class TestNode(TemplatingNode[BaseState, str]):
    """This is a test comment that should appear as a docstring"""

    template = """Hello world"""
    inputs = {}
"
`;

exports[`WorkflowProjectGenerator > Nodes present but not in graph > should generate unused_graphs if final output is not used > code/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow

from .nodes.final_output import FinalOutput
from .nodes.generic_node import GenericNode


class Workflow(BaseWorkflow):
    graph = GenericNode
    unused_graphs = {FinalOutput}

    class Outputs(BaseWorkflow.Outputs):
        final_output = FinalOutput.Outputs.value
"
`;

exports[`WorkflowProjectGenerator > Nodes present but not in graph > should still generate a file for the second node > code/display/nodes/second_node.py 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.second_node import SecondNode


class SecondNodeDisplay(BaseNodeDisplay[SecondNode]):
    label = "Second Node"
    node_id = UUID("6bdede82-bcd6-42ab-8f6b-b3988fc6648f")
    output_display = {
        SecondNode.Outputs.output: NodeOutputDisplay(id=UUID("bd71c32b-0762-4556-a1bc-2c36b15f6428"), name="output")
    }
    display_data = NodeDisplayData(position=NodeDisplayPosition(x=0, y=0))
"
`;

exports[`WorkflowProjectGenerator > Nodes present but not in graph > should still generate a file for the second node > code/nodes/second_node.py 1`] = `
"from vellum.workflows import BaseNode


class SecondNode(BaseNode):
    class Outputs(BaseNode.Outputs):
        output: str
"
`;

exports[`WorkflowProjectGenerator > Nodes present but not in graph > should still generate a file for the second node > code/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow

from .nodes.first_node import FirstNode
from .nodes.second_node import SecondNode


class Workflow(BaseWorkflow):
    graph = FirstNode
    unused_graphs = {SecondNode}
"
`;

exports[`WorkflowProjectGenerator > Nodes with forward references > should generate a proper Lazy Reference for the first node > code/nodes/first_node.py 1`] = `
"from vellum.workflows import BaseNode
from vellum.workflows.references import LazyReference


class FirstNode(BaseNode):
    forward = LazyReference("SecondNode.Outputs.output")
"
`;

exports[`WorkflowProjectGenerator > adornments > should correctly generate code for a prompt node with retry adornment > code/display/nodes/prompt.py 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseInlinePromptNodeDisplay, BaseRetryNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay, PortDisplayOverrides

from ...nodes.prompt import Prompt


@BaseRetryNodeDisplay.wrap(node_id=UUID("65483f3d-59a3-4a8d-a8ab-70e6797cc474"))
class PromptDisplay(BaseInlinePromptNodeDisplay[Prompt]):
    label = "Prompt"
    node_id = UUID("82d5c288-aab8-4d27-bceb-4ba7bc688c34")
    output_id = UUID("e054f21d-33e1-4c76-8b1d-b22c393f6c7d")
    array_output_id = UUID("191a66c6-3e38-45e0-b5dd-5e644fdec8b0")
    target_handle_id = UUID("0f3f518a-ce24-4355-8568-94e1bf295725")
    node_input_ids_by_name = {"prompt_inputs.text": UUID("043a9f22-17c2-4d51-b106-753842a0c0b9")}
    output_display = {
        Prompt.Outputs.text: NodeOutputDisplay(id=UUID("e054f21d-33e1-4c76-8b1d-b22c393f6c7d"), name="text"),
        Prompt.Outputs.results: NodeOutputDisplay(id=UUID("191a66c6-3e38-45e0-b5dd-5e644fdec8b0"), name="results"),
    }
    port_displays = {Prompt.Ports.default: PortDisplayOverrides(id=UUID("c678ddd0-f646-4bd3-9557-9ad63f6d8f3c"))}
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=1971.8034185919948, y=205.60253395092258), width=480, height=175
    )
"
`;

exports[`WorkflowProjectGenerator > adornments > should correctly generate code for a prompt node with retry adornment > code/nodes/prompt.py 1`] = `
"from vellum import (
    ChatMessagePromptBlock,
    PlainTextPromptBlock,
    PromptParameters,
    RichTextPromptBlock,
    VariablePromptBlock,
)
from vellum.workflows.nodes.core.retry_node.node import RetryNode
from vellum.workflows.nodes.displayable import InlinePromptNode


@RetryNode.wrap(max_attempts=5)
class Prompt(InlinePromptNode):
    ml_model = "gpt-4o-mini"
    blocks = [
        ChatMessagePromptBlock(
            chat_role="SYSTEM",
            blocks=[
                RichTextPromptBlock(
                    blocks=[
                        PlainTextPromptBlock(
                            text="""\\
Summarize the following text: hello today is feb 7 bad weather

\\
"""
                        ),
                        VariablePromptBlock(input_variable="text"),
                    ]
                )
            ],
        ),
    ]
    prompt_inputs = {
        "text": None,
    }
    parameters = PromptParameters(
        stop=[],
        temperature=0,
        max_tokens=1000,
        top_p=1,
        top_k=0,
        frequency_penalty=0,
        presence_penalty=0,
        logit_bias={},
        custom_parameters=None,
    )
"
`;

exports[`WorkflowProjectGenerator > adornments > should correctly generate default code for adornments > code/nodes/prompt.py 1`] = `
"from vellum import PromptParameters
from vellum.workflows.nodes.core.retry_node.node import RetryNode
from vellum.workflows.nodes.core.try_node.node import TryNode
from vellum.workflows.nodes.displayable import InlinePromptNode


@TryNode.wrap()
@RetryNode.wrap(max_attempts=1)
class Prompt(InlinePromptNode):
    ml_model = "gpt-4o-mini"
    blocks = []
    parameters = PromptParameters(
        stop=[],
        temperature=None,
        max_tokens=None,
        top_p=None,
        top_k=None,
        frequency_penalty=None,
        presence_penalty=None,
        logit_bias=None,
        custom_parameters=None,
    )
"
`;

exports[`WorkflowProjectGenerator > adornments > should correctly handle error code and custom string attribute types in adornments > code/nodes/prompt.py 1`] = `
"from vellum import PromptParameters
from vellum.workflows.errors.types import WorkflowErrorCode
from vellum.workflows.nodes.core.try_node.node import TryNode
from vellum.workflows.nodes.displayable import InlinePromptNode


@TryNode.wrap(on_error_code=WorkflowErrorCode.INVALID_WORKFLOW, custom_message="This is a regular string")
class Prompt(InlinePromptNode):
    ml_model = "gpt-4o-mini"
    blocks = []
    parameters = PromptParameters(
        stop=[],
        temperature=None,
        max_tokens=None,
        top_p=None,
        top_k=None,
        frequency_penalty=None,
        presence_penalty=None,
        logit_bias=None,
        custom_parameters=None,
    )
"
`;

exports[`WorkflowProjectGenerator > adornments > should generate try adornment node with correct attributes > generic_test/nodes/prompt.py 1`] = `
"from vellum import PromptParameters
from vellum.workflows.errors.types import WorkflowErrorCode
from vellum.workflows.nodes.core.try_node.node import TryNode
from vellum.workflows.nodes.displayable import InlinePromptNode


@TryNode.wrap(on_error_code=WorkflowErrorCode.INVALID_WORKFLOW)
class Prompt(InlinePromptNode):
    ml_model = "gpt-4o-mini"
    blocks = []
    parameters = PromptParameters(
        stop=[],
        temperature=None,
        max_tokens=None,
        top_p=None,
        top_k=None,
        frequency_penalty=None,
        presence_penalty=None,
        logit_bias=None,
        custom_parameters=None,
    )
"
`;

exports[`WorkflowProjectGenerator > code execution node at project level > should not autoformat the script file > code/nodes/code_execution_node/script.py 1`] = `
"import foo, bar
baz = foo + bar
"
`;

exports[`WorkflowProjectGenerator > combinator normalization > should normalize AND to OR combinators > code/nodes/final_output.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutput(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = 3
"
`;

exports[`WorkflowProjectGenerator > failure cases > should generate code even if a node fails to find invalid ports and target nodes > code/nodes/bad_node.py 1`] = `
"from vellum.workflows.nodes.displayable import TemplatingNode
from vellum.workflows.state import BaseState


class BadNode(TemplatingNode[BaseState, str]):
    template = """foo"""
    inputs = {}
"
`;

exports[`WorkflowProjectGenerator > failure cases > should generate code even if a node fails to generate > code/nodes/bad_node.py 1`] = `
"from vellum.workflows.nodes.displayable import TemplatingNode
from vellum.workflows.state import BaseState


class BadNode(TemplatingNode[BaseState, str]):
    template = """foo"""
    inputs = {}
"
`;

exports[`WorkflowProjectGenerator > function > should generate <function_name>.py file > code/display/nodes/tool_call/__init__.py 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay, PortDisplayOverrides

from ....nodes.tool_call import GetCurrentWeatherNode


class GetCurrentWeatherNodeDisplay(BaseNodeDisplay[GetCurrentWeatherNode]):
    label = "GetCurrentWeatherNode"
    node_id = UUID("tool-calling-node")
    attribute_ids_by_name = {
        "ml_model": UUID("75bd1347-dca2-4cba-b0b0-a20a2923ebcc"),
        "max_tool_calls": UUID("723f614a-be30-4f27-90d0-896c740e58d3"),
        "blocks": UUID("beec5344-2eff-47d2-b920-b90367370d79"),
        "functions": UUID("7b1ab802-3228-43b3-a493-734c94794710"),
        "prompt_inputs": UUID("38cf126e-a186-4a63-8e30-47c4507413cd"),
    }
    output_display = {
        GetCurrentWeatherNode.Outputs.text: NodeOutputDisplay(
            id=UUID("73a3c1e6-b632-45c5-a837-50922ccf0d47"), name="text"
        ),
        GetCurrentWeatherNode.Outputs.chat_history: NodeOutputDisplay(
            id=UUID("7dfce73d-3d56-4bb6-8a7e-cc1b3e38746e"), name="chat_history"
        ),
    }
    port_displays = {
        GetCurrentWeatherNode.Ports.default: PortDisplayOverrides(id=UUID("7b97f998-4be5-478d-94c4-9423db5f6392"))
    }
    display_data = NodeDisplayData(position=NodeDisplayPosition(x=0, y=0))
"
`;

exports[`WorkflowProjectGenerator > function > should generate <function_name>.py file > code/nodes/tool_call/__init__.py 1`] = `
"from .format_answer import format_answer
from .get_current_weather import get_current_weather

from vellum import ChatMessagePromptBlock, PlainTextPromptBlock, RichTextPromptBlock, VariablePromptBlock
from vellum.workflows.nodes.displayable.tool_calling_node.node import ToolCallingNode


class GetCurrentWeatherNode(ToolCallingNode):
    ml_model = "gpt-4o-mini"
    max_tool_calls = 3
    blocks = [
        ChatMessagePromptBlock(
            chat_role="SYSTEM",
            blocks=[RichTextPromptBlock(blocks=[PlainTextPromptBlock(text="""You are a weather expert""")])],
        ),
        ChatMessagePromptBlock(
            chat_role="USER", blocks=[RichTextPromptBlock(blocks=[VariablePromptBlock(input_variable="question")])]
        ),
    ]
    functions = [get_current_weather, format_answer]
    prompt_inputs = {
        "question": "What's the weather like in San Francisco?",
    }
"
`;

exports[`WorkflowProjectGenerator > function > should generate <function_name>.py file > code/nodes/tool_call/format_answer.py 1`] = `
"def format_answer(answer: str) -> str:
    """
    Format the answer and request the LLM to provide a final text summary.
    """
    formatted = f"The answer to the question is: {answer}"
    return (
        f"{formatted}\\n\\nNow please provide a final summary with any temperature conversions or additional information."
    )
"
`;

exports[`WorkflowProjectGenerator > function > should generate <function_name>.py file > code/nodes/tool_call/get_current_weather.py 1`] = `
"from vellum.workflows.utils.functions import use_tool_inputs

from ...inputs import Inputs


@use_tool_inputs(location=Inputs.location)
def get_current_weather(location: str, unit: str) -> str:
    """
    Get the current weather in a given location.
    """
    return f"The current weather in {location} is sunny with a temperature of 70 degrees {unit}."

"
`;

exports[`WorkflowProjectGenerator > function > should generate correct use tool inputs decorator - 'hello_world first' > code/nodes/tool_call/get_current_weather.py 1`] = `
"from vellum.workflows.utils.functions import use_tool_inputs

from ...inputs import Inputs

import json

def hello_world(name: str) -> str:
    """
    Say hello to someone.
    """
    return f"Hello, {name}!"


@use_tool_inputs(location=Inputs.location)
def get_current_weather(location: str, unit: str) -> str:
    """
    Get the current weather in a given location.
    """
    return f"The current weather in {location} is sunny with a temperature of 70 degrees {unit}."

"
`;

exports[`WorkflowProjectGenerator > function > should generate correct use tool inputs decorator - 'simple' > code/nodes/tool_call/get_current_weather.py 1`] = `
"from vellum.workflows.utils.functions import use_tool_inputs

from ...inputs import Inputs

import json


@use_tool_inputs(location=Inputs.location)
def get_current_weather(location: str, unit: str) -> str:
    """
    Get the current weather in a given location.
    """
    return f"The current weather in {location} is sunny with a temperature of 70 degrees {unit}."

"
`;

exports[`WorkflowProjectGenerator > function > should generate empty function array if no functions are defined > code/nodes/tool_call/__init__.py 1`] = `
"from vellum import ChatMessagePromptBlock, PlainTextPromptBlock, RichTextPromptBlock, VariablePromptBlock
from vellum.workflows.nodes.displayable.tool_calling_node.node import ToolCallingNode


class GetCurrentWeatherNode(ToolCallingNode):
    ml_model = "gpt-4o-mini"
    max_tool_calls = 3
    blocks = [
        ChatMessagePromptBlock(
            chat_role="SYSTEM",
            blocks=[RichTextPromptBlock(blocks=[PlainTextPromptBlock(text="""You are a weather expert""")])],
        ),
        ChatMessagePromptBlock(
            chat_role="USER", blocks=[RichTextPromptBlock(blocks=[VariablePromptBlock(input_variable="question")])]
        ),
    ]
    functions = []
    prompt_inputs = {
        "question": "What's the weather like in San Francisco?",
    }
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/display/nodes/tool_call_get_current_weather_node/__init__.py 1`] = `
"from uuid import UUID
from .weather_function.nodes import *

from vellum_ee.workflows.display.editor import NodeDisplayComment, NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay, PortDisplayOverrides

from ....nodes.tool_call_get_current_weather_node import GetCurrentWeatherNode


class GetCurrentWeatherNodeDisplay(BaseNodeDisplay[GetCurrentWeatherNode]):
    label = "GetCurrentWeatherNode"
    node_id = UUID("21f29cac-da87-495f-bba1-093d423f4e46")
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=0, y=0),
        comment=NodeDisplayComment(
            value="\\n    A tool calling node that calls the get_current_weather function.\\n    "
        ),
    )
    attribute_ids_by_name = {
        "ml_model": UUID("44420e39-966f-4c59-bdf8-6365a61c5d2a"),
        "max_tool_calls": UUID("5c041b7d-732c-4773-a93a-32211f2af0b3"),
        "blocks": UUID("669cfb4b-8c25-460e-8952-b63d91302cbc"),
        "functions": UUID("78324739-ff89-47a5-902b-10da0cb95c6d"),
        "prompt_inputs": UUID("0f6dc102-3460-4963-91fa-7ba85d65ef7a"),
    }
    output_display = {
        GetCurrentWeatherNode.Outputs.text: NodeOutputDisplay(
            id=UUID("e62bc785-a914-4066-b79e-8c89a5d0ec6c"), name="text"
        ),
        GetCurrentWeatherNode.Outputs.chat_history: NodeOutputDisplay(
            id=UUID("4674f1d9-e3af-411f-8a55-40a3a3ab5394"), name="chat_history"
        ),
    }
    port_displays = {
        GetCurrentWeatherNode.Ports.default: PortDisplayOverrides(id=UUID("3cd6d78c-9dad-42aa-ad38-31f67057c379"))
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=0, y=0),
        comment=NodeDisplayComment(
            value="\\n    A tool calling node that calls the get_current_weather function.\\n    "
        ),
    )
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/display/nodes/tool_call_get_current_weather_node/weather_function/__init__.py 1`] = `
"# flake8: noqa: F401, F403

from .nodes import *
from .workflow import *
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/display/nodes/tool_call_get_current_weather_node/weather_function/workflow.py 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.base import (
    EdgeDisplay,
    EntrypointDisplay,
    WorkflowDisplayData,
    WorkflowDisplayDataViewport,
    WorkflowInputsDisplay,
    WorkflowMetaDisplay,
    WorkflowOutputDisplay,
)
from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.workflows import BaseWorkflowDisplay

from .....nodes.tool_call_get_current_weather_node.weather_function.inputs import Inputs
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.code_execution_node import CodeExecutionNode
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.final_output import FinalOutput3
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.final_output_1 import FinalOutput4
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.tool_call_start_node import StartNode
from .....nodes.tool_call_get_current_weather_node.weather_function.workflow import WeatherFunction


class WeatherFunctionDisplay(BaseWorkflowDisplay[WeatherFunction]):
    workflow_display = WorkflowMetaDisplay(
        entrypoint_node_id=UUID("d97d2a36-3347-487e-b915-3bc874aaded4"),
        entrypoint_node_source_handle_id=UUID("c55f8e1e-0422-4009-af54-86df5625ba71"),
        entrypoint_node_display=NodeDisplayData(position=NodeDisplayPosition(x=0, y=0)),
        display_data=WorkflowDisplayData(viewport=WorkflowDisplayDataViewport(x=0, y=0, zoom=1)),
    )
    inputs_display = {
        Inputs.city: WorkflowInputsDisplay(id=UUID("5246e023-8bcb-4572-be8e-ca9cf19807da"), name="city"),
        Inputs.date: WorkflowInputsDisplay(id=UUID("c5d2aa82-10ad-4511-97ce-66b01af721a1"), name="date"),
    }
    entrypoint_displays = {
        CodeExecutionNode: EntrypointDisplay(
            id=UUID("d97d2a36-3347-487e-b915-3bc874aaded4"),
            edge_display=EdgeDisplay(id=UUID("15b49a1f-c033-4f50-a12f-42daae03539e")),
        )
    }
    edge_displays = {
        (CodeExecutionNode.Ports.default, StartNode): EdgeDisplay(id=UUID("code-to-start-edge"), z_index=None),
        (StartNode.Ports.default, FinalOutput3): EdgeDisplay(
            id=UUID("ab8c4a64-465d-4406-a407-9faa09d0326d"), z_index=None
        ),
        (StartNode.Ports.default, FinalOutput4): EdgeDisplay(
            id=UUID("f9dc12de-4284-419d-beb2-927452b80da0"), z_index=None
        ),
    }
    output_displays = {
        WeatherFunction.Outputs.temperature: WorkflowOutputDisplay(
            id=UUID("1f300ab1-7a63-4c0f-81d5-5e6df2a5181c"), name="temperature"
        ),
        WeatherFunction.Outputs.reasoning: WorkflowOutputDisplay(
            id=UUID("64c803c9-02a0-4133-8858-14a3bddc0600"), name="reasoning"
        ),
    }
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/inputs.py 1`] = `
"from vellum.workflows.inputs import BaseInputs


class Inputs(BaseInputs):
    query: str
    city: str
    date: str
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/final_output.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from ..inputs import Inputs


class FinalOutput(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = Inputs.city
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/final_output_1.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_get_current_weather_node import GetCurrentWeatherNode


class FinalOutput1(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = GetCurrentWeatherNode.Outputs.text
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/final_output_2.py 1`] = `
"from vellum import ChatMessage
from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_get_current_weather_node import GetCurrentWeatherNode


class FinalOutput2(FinalOutputNode[BaseState, list[ChatMessage]]):
    class Outputs(FinalOutputNode.Outputs):
        value = GetCurrentWeatherNode.Outputs.chat_history
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/__init__.py 1`] = `
"from .weather_function.workflow import WeatherFunction

from vellum import ChatMessagePromptBlock, PlainTextPromptBlock, RichTextPromptBlock, VariablePromptBlock
from vellum.workflows.nodes.displayable.tool_calling_node.node import ToolCallingNode

from ...inputs import Inputs


class GetCurrentWeatherNode(ToolCallingNode):
    """
    A tool calling node that calls the get_current_weather function.
    """

    ml_model = "gpt-4o-mini"
    max_tool_calls = 3
    blocks = [
        ChatMessagePromptBlock(
            chat_role="SYSTEM",
            blocks=[RichTextPromptBlock(blocks=[PlainTextPromptBlock(text="""You are a weather expert""")])],
        ),
        ChatMessagePromptBlock(
            chat_role="USER",
            blocks=[
                RichTextPromptBlock(
                    blocks=[
                        PlainTextPromptBlock(text="""What is the weather in """),
                        VariablePromptBlock(input_variable="city"),
                        PlainTextPromptBlock(text=""" on """),
                        VariablePromptBlock(input_variable="date"),
                        PlainTextPromptBlock(text="""?"""),
                    ]
                )
            ],
        ),
    ]
    functions = [WeatherFunction]
    prompt_inputs = {
        "city": Inputs.city,
        "date": Inputs.date,
    }
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/weather_function/__init__.py 1`] = `
"# flake8: noqa: F401, F403

from ....display import *
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/weather_function/inputs.py 1`] = `
"from vellum.workflows.inputs import BaseInputs


class Inputs(BaseInputs):
    city: str
    date: str
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/weather_function/nodes/final_output.py 1`] = `
"from typing import Union

from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_start_node import StartNode


class FinalOutput3(FinalOutputNode[BaseState, Union[float, int]]):
    class Outputs(FinalOutputNode.Outputs):
        value = StartNode.Outputs.temperature
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/weather_function/nodes/final_output_1.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_start_node import StartNode


class FinalOutput4(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = StartNode.Outputs.reasoning
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/weather_function/nodes/tool_call_start_node.py 1`] = `
"from typing import Union

from vellum.workflows import BaseNode

from ..inputs import Inputs


class StartNode(BaseNode):
    city = Inputs.city
    date = Inputs.date

    class Outputs(BaseNode.Outputs):
        temperature: Union[float, int]
        reasoning: str
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/nodes/tool_call_get_current_weather_node/weather_function/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow
from vellum.workflows.state import BaseState

from .inputs import Inputs
from .nodes.code_execution_node import CodeExecutionNode
from .nodes.final_output import FinalOutput3
from .nodes.final_output_1 import FinalOutput4
from .nodes.tool_call_start_node import StartNode


class WeatherFunction(BaseWorkflow[Inputs, BaseState]):
    """Test description for inline workflow tool"""

    graph = (
        CodeExecutionNode
        >> StartNode
        >> {
            FinalOutput3,
            FinalOutput4,
        }
    )

    class Outputs(BaseWorkflow.Outputs):
        temperature = FinalOutput3.Outputs.value
        reasoning = FinalOutput4.Outputs.value
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'no packages' > code/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow
from vellum.workflows.state import BaseState

from .inputs import Inputs
from .nodes.final_output import FinalOutput
from .nodes.final_output_1 import FinalOutput1
from .nodes.final_output_2 import FinalOutput2
from .nodes.tool_call_get_current_weather_node import GetCurrentWeatherNode


class Workflow(BaseWorkflow[Inputs, BaseState]):
    graph = GetCurrentWeatherNode >> {
        FinalOutput,
        FinalOutput1,
        FinalOutput2,
    }

    class Outputs(BaseWorkflow.Outputs):
        final_output = FinalOutput.Outputs.value
        text = FinalOutput1.Outputs.value
        chat_history = FinalOutput2.Outputs.value
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/display/nodes/tool_call_get_current_weather_node/__init__.py 1`] = `
"from uuid import UUID
from .weather_function.nodes import *

from vellum_ee.workflows.display.editor import NodeDisplayComment, NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay, PortDisplayOverrides

from ....nodes.tool_call_get_current_weather_node import GetCurrentWeatherNode


class GetCurrentWeatherNodeDisplay(BaseNodeDisplay[GetCurrentWeatherNode]):
    label = "GetCurrentWeatherNode"
    node_id = UUID("21f29cac-da87-495f-bba1-093d423f4e46")
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=0, y=0),
        comment=NodeDisplayComment(
            value="\\n    A tool calling node that calls the get_current_weather function.\\n    "
        ),
    )
    attribute_ids_by_name = {
        "ml_model": UUID("44420e39-966f-4c59-bdf8-6365a61c5d2a"),
        "max_tool_calls": UUID("5c041b7d-732c-4773-a93a-32211f2af0b3"),
        "blocks": UUID("669cfb4b-8c25-460e-8952-b63d91302cbc"),
        "functions": UUID("78324739-ff89-47a5-902b-10da0cb95c6d"),
        "prompt_inputs": UUID("0f6dc102-3460-4963-91fa-7ba85d65ef7a"),
    }
    output_display = {
        GetCurrentWeatherNode.Outputs.text: NodeOutputDisplay(
            id=UUID("e62bc785-a914-4066-b79e-8c89a5d0ec6c"), name="text"
        ),
        GetCurrentWeatherNode.Outputs.chat_history: NodeOutputDisplay(
            id=UUID("4674f1d9-e3af-411f-8a55-40a3a3ab5394"), name="chat_history"
        ),
    }
    port_displays = {
        GetCurrentWeatherNode.Ports.default: PortDisplayOverrides(id=UUID("3cd6d78c-9dad-42aa-ad38-31f67057c379"))
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=0, y=0),
        comment=NodeDisplayComment(
            value="\\n    A tool calling node that calls the get_current_weather function.\\n    "
        ),
    )
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/display/nodes/tool_call_get_current_weather_node/weather_function/__init__.py 1`] = `
"# flake8: noqa: F401, F403

from .nodes import *
from .workflow import *
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/display/nodes/tool_call_get_current_weather_node/weather_function/workflow.py 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.base import (
    EdgeDisplay,
    EntrypointDisplay,
    WorkflowDisplayData,
    WorkflowDisplayDataViewport,
    WorkflowInputsDisplay,
    WorkflowMetaDisplay,
    WorkflowOutputDisplay,
)
from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.workflows import BaseWorkflowDisplay

from .....nodes.tool_call_get_current_weather_node.weather_function.inputs import Inputs
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.code_execution_node import CodeExecutionNode
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.final_output import FinalOutput3
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.final_output_1 import FinalOutput4
from .....nodes.tool_call_get_current_weather_node.weather_function.nodes.tool_call_start_node import StartNode
from .....nodes.tool_call_get_current_weather_node.weather_function.workflow import WeatherFunction


class WeatherFunctionDisplay(BaseWorkflowDisplay[WeatherFunction]):
    workflow_display = WorkflowMetaDisplay(
        entrypoint_node_id=UUID("d97d2a36-3347-487e-b915-3bc874aaded4"),
        entrypoint_node_source_handle_id=UUID("c55f8e1e-0422-4009-af54-86df5625ba71"),
        entrypoint_node_display=NodeDisplayData(position=NodeDisplayPosition(x=0, y=0)),
        display_data=WorkflowDisplayData(viewport=WorkflowDisplayDataViewport(x=0, y=0, zoom=1)),
    )
    inputs_display = {
        Inputs.city: WorkflowInputsDisplay(id=UUID("5246e023-8bcb-4572-be8e-ca9cf19807da"), name="city"),
        Inputs.date: WorkflowInputsDisplay(id=UUID("c5d2aa82-10ad-4511-97ce-66b01af721a1"), name="date"),
    }
    entrypoint_displays = {
        CodeExecutionNode: EntrypointDisplay(
            id=UUID("d97d2a36-3347-487e-b915-3bc874aaded4"),
            edge_display=EdgeDisplay(id=UUID("15b49a1f-c033-4f50-a12f-42daae03539e")),
        )
    }
    edge_displays = {
        (CodeExecutionNode.Ports.default, StartNode): EdgeDisplay(id=UUID("code-to-start-edge"), z_index=None),
        (StartNode.Ports.default, FinalOutput3): EdgeDisplay(
            id=UUID("ab8c4a64-465d-4406-a407-9faa09d0326d"), z_index=None
        ),
        (StartNode.Ports.default, FinalOutput4): EdgeDisplay(
            id=UUID("f9dc12de-4284-419d-beb2-927452b80da0"), z_index=None
        ),
    }
    output_displays = {
        WeatherFunction.Outputs.temperature: WorkflowOutputDisplay(
            id=UUID("1f300ab1-7a63-4c0f-81d5-5e6df2a5181c"), name="temperature"
        ),
        WeatherFunction.Outputs.reasoning: WorkflowOutputDisplay(
            id=UUID("64c803c9-02a0-4133-8858-14a3bddc0600"), name="reasoning"
        ),
    }
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/inputs.py 1`] = `
"from vellum.workflows.inputs import BaseInputs


class Inputs(BaseInputs):
    query: str
    city: str
    date: str
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/final_output.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from ..inputs import Inputs


class FinalOutput(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = Inputs.city
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/final_output_1.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_get_current_weather_node import GetCurrentWeatherNode


class FinalOutput1(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = GetCurrentWeatherNode.Outputs.text
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/final_output_2.py 1`] = `
"from vellum import ChatMessage
from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_get_current_weather_node import GetCurrentWeatherNode


class FinalOutput2(FinalOutputNode[BaseState, list[ChatMessage]]):
    class Outputs(FinalOutputNode.Outputs):
        value = GetCurrentWeatherNode.Outputs.chat_history
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/__init__.py 1`] = `
"from .weather_function.workflow import WeatherFunction

from vellum import ChatMessagePromptBlock, PlainTextPromptBlock, RichTextPromptBlock, VariablePromptBlock
from vellum.workflows.nodes.displayable.tool_calling_node.node import ToolCallingNode

from ...inputs import Inputs


class GetCurrentWeatherNode(ToolCallingNode):
    """
    A tool calling node that calls the get_current_weather function.
    """

    ml_model = "gpt-4o-mini"
    max_tool_calls = 3
    blocks = [
        ChatMessagePromptBlock(
            chat_role="SYSTEM",
            blocks=[RichTextPromptBlock(blocks=[PlainTextPromptBlock(text="""You are a weather expert""")])],
        ),
        ChatMessagePromptBlock(
            chat_role="USER",
            blocks=[
                RichTextPromptBlock(
                    blocks=[
                        PlainTextPromptBlock(text="""What is the weather in """),
                        VariablePromptBlock(input_variable="city"),
                        PlainTextPromptBlock(text=""" on """),
                        VariablePromptBlock(input_variable="date"),
                        PlainTextPromptBlock(text="""?"""),
                    ]
                )
            ],
        ),
    ]
    functions = [WeatherFunction]
    prompt_inputs = {
        "city": Inputs.city,
        "date": Inputs.date,
    }
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/weather_function/__init__.py 1`] = `
"# flake8: noqa: F401, F403

from ....display import *
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/weather_function/inputs.py 1`] = `
"from vellum.workflows.inputs import BaseInputs


class Inputs(BaseInputs):
    city: str
    date: str
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/weather_function/nodes/final_output.py 1`] = `
"from typing import Union

from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_start_node import StartNode


class FinalOutput3(FinalOutputNode[BaseState, Union[float, int]]):
    class Outputs(FinalOutputNode.Outputs):
        value = StartNode.Outputs.temperature
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/weather_function/nodes/final_output_1.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .tool_call_start_node import StartNode


class FinalOutput4(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = StartNode.Outputs.reasoning
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/weather_function/nodes/tool_call_start_node.py 1`] = `
"from typing import Union

from vellum.workflows import BaseNode

from ..inputs import Inputs


class StartNode(BaseNode):
    city = Inputs.city
    date = Inputs.date

    class Outputs(BaseNode.Outputs):
        temperature: Union[float, int]
        reasoning: str
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/nodes/tool_call_get_current_weather_node/weather_function/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow
from vellum.workflows.state import BaseState

from .inputs import Inputs
from .nodes.code_execution_node import CodeExecutionNode
from .nodes.final_output import FinalOutput3
from .nodes.final_output_1 import FinalOutput4
from .nodes.tool_call_start_node import StartNode


class WeatherFunction(BaseWorkflow[Inputs, BaseState]):
    """Test description for inline workflow tool"""

    graph = (
        CodeExecutionNode
        >> StartNode
        >> {
            FinalOutput3,
            FinalOutput4,
        }
    )

    class Outputs(BaseWorkflow.Outputs):
        temperature = FinalOutput3.Outputs.value
        reasoning = FinalOutput4.Outputs.value
"
`;

exports[`WorkflowProjectGenerator > function > should generate inline workflow tool 'with packages' > code/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow
from vellum.workflows.state import BaseState

from .inputs import Inputs
from .nodes.final_output import FinalOutput
from .nodes.final_output_1 import FinalOutput1
from .nodes.final_output_2 import FinalOutput2
from .nodes.tool_call_get_current_weather_node import GetCurrentWeatherNode


class Workflow(BaseWorkflow[Inputs, BaseState]):
    graph = GetCurrentWeatherNode >> {
        FinalOutput,
        FinalOutput1,
        FinalOutput2,
    }

    class Outputs(BaseWorkflow.Outputs):
        final_output = FinalOutput.Outputs.value
        text = FinalOutput1.Outputs.value
        chat_history = FinalOutput2.Outputs.value
"
`;

exports[`WorkflowProjectGenerator > function > should generate workflow deployment tool > code/nodes/workflow/__init__.py 1`] = `
"from vellum.workflows.nodes.displayable.tool_calling_node.node import ToolCallingNode
from vellum.workflows.types.definition import DeploymentDefinition


class MyToolCallingNode(ToolCallingNode):
    ml_model = "gpt-4"
    blocks = []
    functions = [DeploymentDefinition(deployment="add-code-exec", release_tag="LATEST")]
    prompt_inputs = {}
"
`;

exports[`WorkflowProjectGenerator > function > should not generate docstring if description is empty string > code/nodes/tool_call_get_current_weather_node/weather_function/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow
from vellum.workflows.state import BaseState

from .inputs import Inputs
from .nodes.tool_call_start_node import StartNode


class WeatherFunction(BaseWorkflow[Inputs, BaseState]):
    graph = StartNode
"
`;

exports[`WorkflowProjectGenerator > include sandbox > should generate correct inputs for empty list and dict defaults > code/inputs.py 1`] = `
"from pydantic import Field
from typing import Any, Optional

from vellum import VellumValue
from vellum.workflows.inputs import BaseInputs


class Inputs(BaseInputs):
    empty_list_input: list[VellumValue] = Field(default_factory=list)
    empty_dict_input: Any = Field(default_factory=dict)
    empty_list_input_optional: Optional[list[VellumValue]] = Field(default_factory=list)
    empty_dict_input_optional: Optional[Any] = Field(default_factory=dict)
"
`;

exports[`WorkflowProjectGenerator > include sandbox > should generate correct inputs for non-empty list and dict defaults > code/inputs.py 1`] = `
"from pydantic import Field
from typing import Any, Optional

from vellum import VellumValue
from vellum.workflows.inputs import BaseInputs


class Inputs(BaseInputs):
    non_empty_list_input: list[VellumValue] = Field(
        default_factory=lambda: [
            "item1",
            "item2",
        ]
    )
    non_empty_dict_input: Any = Field(
        default_factory=lambda: {
            "key1": "value1",
            "key2": "value2",
        }
    )
    non_empty_list_input_optional: Optional[list[VellumValue]] = Field(
        default_factory=lambda: [
            42,
        ]
    )
    non_empty_dict_input_optional: Optional[Any] = Field(
        default_factory=lambda: {
            "nested": {
                "key": "value",
            },
        }
    )
"
`;

exports[`WorkflowProjectGenerator > include sandbox > should include a sandbox.py file when passed sandboxInputs > code/sandbox.py 1`] = `
"from vellum import ArrayChatMessageContent, ChatMessage, StringChatMessageContent
from vellum.workflows.inputs import DatasetRow
from vellum.workflows.sandbox import WorkflowSandboxRunner

from .inputs import Inputs
from .workflow import Workflow

dataset = [
    DatasetRow(
        label="Example 1",
        inputs=Inputs(
            input="foo",
            chat=[
                ChatMessage(role="USER", text="foo"),
            ],
        ),
    ),
    DatasetRow(
        label="Example 2",
        inputs=Inputs(
            input="bar",
            chat=[
                ChatMessage(role="USER", content=StringChatMessageContent(value="bar")),
            ],
        ),
    ),
    DatasetRow(
        label="Example 3",
        inputs=Inputs(
            input="hello",
            chat=[
                ChatMessage(
                    role="USER",
                    content=ArrayChatMessageContent(
                        value=[
                            StringChatMessageContent(value="hello"),
                        ]
                    ),
                ),
            ],
        ),
    ),
]

runner = WorkflowSandboxRunner(workflow=Workflow(), dataset=dataset)

if __name__ == "__main__":
    runner.run()
"
`;

exports[`WorkflowProjectGenerator > initialization case > should handle workflow with only ENTRYPOINT and TERMINAL nodes > code/nodes/final_output.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutput(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        pass
"
`;

exports[`WorkflowProjectGenerator > modules > should generate code in the same module as the project > my/module/nodes/templating_node.py 1`] = `
"from vellum.workflows.nodes.displayable import TemplatingNode as BaseTemplatingNode
from vellum.workflows.state import BaseState


class TemplatingNode(BaseTemplatingNode[BaseState, str]):
    template = """foo"""
    inputs = {}
"
`;

exports[`WorkflowProjectGenerator > nodes with output values > should prioritize terminal node data over output values > code/nodes/final_output.py 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState

from .templating_node import TemplatingNode


class FinalOutput(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = TemplatingNode.Outputs.result
"
`;

exports[`WorkflowProjectGenerator > runner config with no container image > should handle a runner config with no container image > code/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow

from .nodes.templating_node import TemplatingNode


class Workflow(BaseWorkflow):
    graph = TemplatingNode
"
`;

exports[`WorkflowProjectGenerator > should escape special characters > should handle node comments with quotes at the beginning and end > code/nodes/templating_node.py 1`] = `
"from vellum.workflows.nodes.displayable import TemplatingNode as BaseTemplatingNode
from vellum.workflows.state import BaseState


class TemplatingNode(BaseTemplatingNode[BaseState, str]):
    """\\"Hello" "World\\""""

    template = """test template"""
    inputs = {}
"
`;

exports[`WorkflowProjectGenerator > should escape special characters > should not escape single quotes in node comments > code/nodes/templating_node.py 1`] = `
"from vellum.workflows.nodes.displayable import TemplatingNode as BaseTemplatingNode
from vellum.workflows.state import BaseState


class TemplatingNode(BaseTemplatingNode[BaseState, str]):
    """'Hello' 'World'"""

    template = """test template"""
    inputs = {}
"
`;

exports[`WorkflowProjectGenerator > should generate correct tool calling init file with multi-level module path > src/testsubworkflowtoolcallingnode/nodes/tool_calling_node/function_test/__init__.py 1`] = `
"# flake8: noqa: F401, F403

from ....display import *
"
`;

exports[`WorkflowProjectGenerator > state > should generate a state.py file > code/display/workflow.py 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.base import EdgeDisplay, EntrypointDisplay, StateValueDisplay, WorkflowMetaDisplay
from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.workflows import BaseWorkflowDisplay

from ..nodes.templating_node import TemplatingNode
from ..state import State
from ..workflow import Workflow


class WorkflowDisplay(BaseWorkflowDisplay[Workflow]):
    workflow_display = WorkflowMetaDisplay(
        entrypoint_node_id=UUID("entry"),
        entrypoint_node_source_handle_id=UUID("entry_source"),
        entrypoint_node_display=NodeDisplayData(position=NodeDisplayPosition(x=0, y=0)),
    )
    state_value_displays = {
        State.foo: StateValueDisplay(id=UUID("5bc5356a-154f-4bba-a8ee-eb283bfd2a25"), name="foo"),
    }
    entrypoint_displays = {
        TemplatingNode: EntrypointDisplay(id=UUID("entry"), edge_display=EdgeDisplay(id=UUID("edge_1")))
    }
    output_displays = {}
"
`;

exports[`WorkflowProjectGenerator > state > should generate a state.py file > code/state.py 1`] = `
"from typing import Optional

from vellum.workflows.state import BaseState


class State(BaseState):
    foo: Optional[str] = None
"
`;

exports[`WorkflowProjectGenerator > state > should generate a state.py file > code/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow
from vellum.workflows.inputs import BaseInputs

from .nodes.templating_node import TemplatingNode
from .state import State


class Workflow(BaseWorkflow[BaseInputs, State]):
    graph = TemplatingNode
"
`;

exports[`WorkflowProjectGenerator > subworkflow with inner and outer generic nodes > should generate workflow with subworkflow node containing inner generic node and outer generic node > code/nodes/outer.py 1`] = `
"from vellum.workflows import BaseNode


class Outer(BaseNode):
    class Outputs(BaseNode.Outputs):
        result: str
"
`;

exports[`WorkflowProjectGenerator > subworkflow with inner and outer generic nodes > should generate workflow with subworkflow node containing inner generic node and outer generic node > code/nodes/subworkflow_node/workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow

from .nodes.inner import Inner
from .nodes.inner_terminal import InnerTerminal


class SubworkflowNodeWorkflow(BaseWorkflow):
    graph = Inner >> InnerTerminal

    class Outputs(BaseWorkflow.Outputs):
        inner_result = InnerTerminal.Outputs.value
"
`;
